layout/style/nsTransitionManager.cpp
@@ -272,6 +272,8 @@ nsTransitionManager::StyleContextChanged(dom::Element *aElement,
   // properties to transition), but for which we didn't just start the
   // transition.  This can happen delay and duration are both zero, or
   // because the new value is not interpolable.
+  // Note that we also do the latter set of work in
+  // nsTransitionManager::PruneCompletedTransitions.
   if (collection) {
     bool checkProperties =
       disp->mTransitions[0].GetProperty() != eCSSPropertyExtra_all_properties;
@@ -600,6 +602,60 @@ nsTransitionManager::ConsiderStartingTransition(
 
   *aStartedAny = true;
   aWhichStarted->AddProperty(aProperty);
+}
+
+void
+nsTransitionManager::PruneCompletedTransitions(mozilla::dom::Element* aElement,
+                                               nsCSSPseudoElements::Type
+                                                 aPseudoType,
+                                               nsStyleContext* aNewStyleContext)
+{
+  AnimationPlayerCollection* collection =
+    GetAnimationPlayers(aElement, aPseudoType, false);
+  if (!collection) {
+    return;
+  }
+
+  // Remove any finished transitions whose style doesn't match the new
+  // style.
+  // This is similar to some of the work that happens near the end of
+  // nsTransitionManager::StyleContextChanged.
+  // FIXME (bug 1158431): Really, we should also cancel running
+  // transitions whose destination doesn't match as well.
+  AnimationPlayerPtrArray& players = collection->mPlayers;
+  size_t i = players.Length();
+  MOZ_ASSERT(i != 0, "empty transitions list?");
+  do {
+    --i;
+    AnimationPlayer* player = players[i];
+    dom::Animation* anim = player->GetSource();
+
+    if (!anim->IsFinishedTransition()) {
+      continue;
+    }
+
+    MOZ_ASSERT(anim && anim->Properties().Length() == 1,
+               "Should have one animation property for a transition");
+    MOZ_ASSERT(anim && anim->Properties()[0].mSegments.Length() == 1,
+               "Animation property should have one segment for a transition");
+    const AnimationProperty& prop = anim->Properties()[0];
+    const AnimationPropertySegment& segment = prop.mSegments[0];
+
+    // Since anim is a finished transition, we know it didn't
+    // influence style.
+    StyleAnimationValue currentValue;
+    if (!ExtractComputedValueForTransition(prop.mProperty, aNewStyleContext,
+                                           currentValue) ||
+        currentValue != segment.mToValue) {
+      players.RemoveElementAt(i);
+    }
+  } while (i != 0);
+
+  if (collection->mPlayers.IsEmpty()) {
+    collection->Destroy();
+    // |collection| is now a dangling pointer!
+    collection = nullptr;
+  }
 }
 
 void
